tests/phase_00_lexer_errors/valid/02_string_closed_ok.hulk
// El lexer debe reconocer una cadena cerrada correctamente como STRING_LITERAL.
"hola";
