tests/phase_00_lexer_errors/invalid/03_unclosed_string_eof.hulk
// El lexer debe reportar cadena sin cerrar al llegar a EOF.
"hola
